--- a/rock-paper-scissor.css
+++ b/rock-paper-scissor.css
@@ -13,3 +13,13 @@
     color: black;
     border: 2px solid black;
 }
+
+.resetBtn{
+    margin: 10px;
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    background-color: rgb(228, 8, 8);
+    color: rgb(255, 255, 255);
+    border: 2px solid black;
+}
